fix refund product js and html

--- a/shopmanager/templates/admin/items/change_list.html
+++ b/shopmanager/templates/admin/items/change_list.html
@@ -56,7 +56,7 @@
         <ul class="object-tools">
           {% block object-tools-items %}
             <li>
-              <a href="/items/product/" class="addlink">库存管理
+              <a href="/items/product/" class="addlink" target="_blank">库存管理
               </a>
             </li>
             <li>
