--- a/shopmanager/templates/trades/trade_order_list.html
+++ b/shopmanager/templates/trades/trade_order_list.html
@@ -1,18 +1,23 @@
+{% with object.order_list as order_list %}
 <table class="table table-bordered table-striped table-condensed">
 	<thead>
 		<th>买家昵称</th><th>收货人</th><th style="width:200px;">标题</th><th>规格</th><th>数量</th><th>付款日期</th><th>退款状态</th><th>操作</th>
 	</thead>
 	<tbody>
-		{% for order in refund_orders %}
+		{% for order in order_list %}
 		<tr>
-		<td>{{ forloop.counter }}</td>
-		<td>{{ order.title }}</td>
-		<td>{{ order|refund_sku:'name' }}</td>
-		<td>{{ order|refund_sku:'num' }}</td>
-		<td>待卖家确认收货</td>
-		<td>{% if order.is_reissue %}<img src="{{ STATIC_URL }}admin/img/icon-yes.gif" alt="yes">
-		{% else %}<img src="{{ STATIC_URL }}admin/img/icon-no.gif" alt="no">{% endif %}</td>
-		{% endfor %}
+			<td>{{ order.buyer_nick }}</td>
+			<td>{{ order.receiver_name }}</td>
+			<td>{{ order.title }}</td>
+			<td>{{ order.sku_properties_name }}</td>
+			<td>{{ order.num }}</td>
+			<td>{{ order.pay_time }}</td>
+			<td>{{ order.refund_status }}</td>
+			<td>{{ order.status }}</td>
+			<td><button outer_id="{{ order.outer_id }}" outer_sku_id="{{ order.outer_sku_id }}" tid="{{ order.tid }}" 
+				title="{{ order.title }}" property="{{ order.sku_properties_name }}" class="order-list-add btn btn-mini btn-primary">添加</button></td>
+			{% endfor %}
 		</tr>
 	</tbody>
 </table>
+{% endwith %}
