fix refund product js

--- a/shopmanager/templates/refunds/refund_products.html
+++ b/shopmanager/templates/refunds/refund_products.html
@@ -118,7 +118,7 @@
 		<fieldset>
 			<legend><h1 class="head-title" >退回商品录入单</h1></legend>
 			<div id="id-baseinfo-panel" class="content-base-info">
-				<table class="table table-bordered table-striped table-condensed">
+				<table id="id-baseinfo-table" class="table table-bordered table-striped table-condensed">
 					<tr>
 						<td>交易ID:</td><td><input type="text" id="id_trade_id" class="simple-text" /></td>
 						<td>买家昵称:</td><td><input type="text" id="id_buyer_nick" class="simple-text" /></td>
@@ -150,7 +150,7 @@
 								<th>物流单号</th>
 								<th>物流公司</th>
 								<th style="width:200px;">商品简称</th>
-								<th>规格</th>
+								<th style="width:150px;">规格</th>
 								<th>数量</th>
 								<th>二次销售</th>
 								<th>操作</th>
