--- a/shopmanager/templates/refunds/refund_manager.html
+++ b/shopmanager/templates/refunds/refund_manager.html
@@ -83,6 +83,32 @@
 		</div>
 	</div>	
 	{% endwith %}
+	<div class="product-panel">
+		<h3 class="head-title" id="id-refund-head">
+			<img src="{{ STATIC_URL }}img/tri_right.png" style="cursor:pointer;margin-right:5px;"></img>未关联退货单退回商品列表</h3>
+		<div id="id-refund-goods">
+			<table id="id-refund-table" class="table table-bordered table-striped table-condensed">
+				<thead>
+					<tr>
+					<th>序号</th>
+					<th>交易ID</th>
+					<th>买家昵称</th>
+					<th>手机</th>
+					<th>固话</th>
+					<th>物流单号</th>
+					<th>物流公司</th>
+					<th style="width:200px;">商品简称</th>
+					<th style="width:150px;">规格</th>
+					<th>数量</th>
+					<th>二次销售</th>
+					<th>操作</th>
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+		</div>
+	</div>
 </body>
 <script src="{{ STATIC_URL }}script/refund/checkrefund.js"></script>
 <script type="text/javascript">
