--- a/shopmanager/templates/refunds/refund_products.html
+++ b/shopmanager/templates/refunds/refund_products.html
@@ -127,7 +127,7 @@
 					</tr>
 					<tr>
 						<td>退货快递:</td><td><input type="text" id="id_return_company_name" class="simple-text" /></td>
-						<td>退货单号:</td><td><input type="text" id="id_return_out_sid" class="simple-text" /></td>
+						<td>快递单号:</td><td><input type="text" id="id_return_out_sid" class="simple-text" /></td>
 						<td>备注:</td><td><textarea id="id-return-memo" class="simple-text" rows="2" cols="40"></textarea></td>
 						<td></td><td><button id="id_clear_btn" class="btn btn-small btn-success">重填</button><td>
 					</tr>
