--- a/shopmanager/templates/refunds/refund_order_product.html
+++ b/shopmanager/templates/refunds/refund_order_product.html
@@ -3,6 +3,7 @@
 <div class="map-content" style="margin-left: auto; margin-right: auto; width: 800px">
 	<div>
 		<div class="well well-small">
+			<div class="order-userinfo" ><label class="label label-success">交易ID:</label>{{ trade.tid }}</div>
 			<div class="order-userinfo" ><label class="label label-success">买家昵称:</label>{{ trade.buyer_nick }}</div>
 			<div class="order-userinfo" ><label class="label label-success">收货人:</label>{{ trade.receiver_name }}</div>
 		</div>
