--- a/shopmanager/templates/refunds/refund_manager.html
+++ b/shopmanager/templates/refunds/refund_manager.html
@@ -69,7 +69,7 @@
 		<div id="post-items" style="display:block;">
 		  <fieldset>
 		  	<legend><h1 class="head-title" >退货单列表</h1></legend>
-			  <table id='id_refund_table' class="table table-bordered table-striped table-condensed">
+			  <table id='id_refund_table' class="table table-bordered table-condensed">
 			    <thead>
 			      <tr><th>序号</th><th>买家昵称</th><th>卖家昵称</th><th>收货人</th><th>退货单数</th><th>创建日期</th><th>退回快递</th><th>快递单号</th><th>退款状态</th><th>天猫介入</th><th>原因</th><th>描述</th></tr>
 			    </thead>
