--- a/shopmanager/templates/refunds/refund_manager.html
+++ b/shopmanager/templates/refunds/refund_manager.html
@@ -26,6 +26,9 @@
 		td {
 			margin:5px; padding:5px;
 		}
+		.head-title a{
+			margin-left:20px;
+		}
 		.container table{ 
 			table-layout:fixed;
 		}
@@ -68,7 +71,7 @@
 	<div class="container">
 		<div id="post-items" style="display:block;">
 		  <fieldset>
-		  	<legend><h1 class="head-title" >退货单列表</h1></legend>
+		  	<legend><h1 class="head-title" >退货单列表  <a href="/admin/refunds/refund/add/" title="创建新退货款单" target="_blank"><i class="icon-plus"></i></a></h1></legend>
 			  <table id='id_refund_table' class="table table-bordered table-condensed">
 			    <thead>
 			      <tr><th>序号</th><th>买家昵称</th><th>卖家昵称</th><th>收货人</th><th>退货单数</th><th>创建日期</th><th>退回快递</th><th>快递单号</th><th>退款状态</th><th>天猫介入</th><th>原因</th><th>描述</th></tr>
