fix refunds ,items and add per_request_num to systemconfig add is_locked to mergetrade

--- a/shopmanager/templates/admin/refunds/change_list.html
+++ b/shopmanager/templates/admin/refunds/change_list.html
@@ -57,7 +57,7 @@
         <ul class="object-tools">
           {% block object-tools-items %}
           	<li>
-              <a href="/admin/refunds/refund/add/?_popup=1" class="addlink">
+              <a href="/admin/refunds/refund/add/" class="addlink">
                 新退货款单
               </a>
             </li>
