--- a/shopmanager/templates/refunds/refund_order_product.html
+++ b/shopmanager/templates/refunds/refund_order_product.html
@@ -7,7 +7,7 @@
 			<div class="order-userinfo" ><label class="label label-success">买家昵称:</label>{{ trade.buyer_nick }}</div>
 			<div class="order-userinfo" ><label class="label label-success">收货人:</label>{{ trade.receiver_name }}</div>
 		</div>
-		<div class="order-head"><h3 class="head-title">退货单列表</h3></div>
+		<div class="order-head"><h3 class="head-title">退货订单列表</h3></div>
 		<div class="order-content">
 			<table class="table table-bordered table-striped table-condensed">
 				<thead>
