fix merge trade driver and net work not avalible

--- a/shopmanager/templates/refunds/refund_manager.html
+++ b/shopmanager/templates/refunds/refund_manager.html
@@ -101,7 +101,7 @@
 		</div>	
 		<div id="id-refund-prod-panel" class="product-panel">
 			<h3 class="head-title" id="id-refund-head">
-				<img src="{{ STATIC_URL }}img/tri_right.png" style="cursor:pointer;margin-right:5px;"></img>未关联退货单退回商品列表</h3>
+				<img src="{{ STATIC_URL }}img/tri_right.png" style="cursor:pointer;margin-right:5px;"></img>未关联退回商品列表</h3>
 			<div id="id-refund-goods">
 				<table id="id-refund-table" class="table table-bordered table-striped table-condensed">
 					<thead>
