--- a/shopmanager/templates/refunds/refund_products.html
+++ b/shopmanager/templates/refunds/refund_products.html
@@ -216,10 +216,10 @@
 			<hr/>
 		</fieldset>
 	</div>
-	<!-- 子订单列表弹出对话框 -->
+	<!-- 订单商品列表弹出对话框 -->
 	<div id="order-prompt" class="order-prompt">
 		<div class="order-prompt-head">
-			<span class="prompt-title">子订单列表</span>
+			<span class="prompt-title">订单商品列表</span>
 			<a id="prompt-close" class="prompt-close"><i class="icon-remove-sign"></i></a>
 		</div>
 		<div id="order-prompt-body" class="order-prompt-body"></div>
