fix refund js and order statistic

--- a/shopmanager/templates/admin/trades/change_list.html
+++ b/shopmanager/templates/admin/trades/change_list.html
@@ -68,7 +68,12 @@
             </li>
             <li>
               <a href="/trades/order/statistic/" class="addlink" target="_blank">
-                交易统计
+                订单统计
+              </a>
+            </li>
+            <li>
+              <a href="/orders/ordernum/pivotchart/" class="addlink" target="_blank">
+                订单商品统计
               </a>
             </li>
             <li>
