--- a/shopmanager/templates/trades/trade_order_list.html
+++ b/shopmanager/templates/trades/trade_order_list.html
@@ -1,7 +1,7 @@
 {% with object.order_list as order_list %}
 <table class="table table-bordered table-striped table-condensed">
 	<thead>
-		<tr><th>买家昵称</th><th>收货人</th><th style="width:200px;">标题</th><th>规格</th><th>数量</th><th>付款日期</th><th>退款状态</th><th>操作</th></tr>
+		<tr><th>买家昵称</th><th>收货人</th><th style="width:200px;">标题</th><th style="width:150px;">规格</th><th>数量</th><th>付款日期</th><th>退款状态</th><th>操作</th></tr>
 	</thead>
 	<tbody>
 		{% for order in order_list %}
