--- a/shopmanager/shopapp/calendar/templates/fullcalendar/default.html
+++ b/shopmanager/shopapp/calendar/templates/fullcalendar/default.html
@@ -68,7 +68,33 @@
 					end: new Date(y, m, 29),
 					url: 'http://google.com/'
 				}
-			]
+			],
+			dayClick: function(date, allDay, jsEvent, view) {
+
+                if (allDay) {
+                    alert('Clicked on the entire day: ' + date);
+                }else{
+                    alert('Clicked on the slot: ' + date);
+                }
+
+                alert('Coordinates: ' + jsEvent.pageX + ',' + jsEvent.pageY);
+
+                alert('Current view: ' + view.name);
+
+                // change the day's background color just for fun
+                $(this).css('background-color', 'red');
+
+    		},
+    		eventClick: function(calEvent, jsEvent, view) {
+
+        		alert('Event: ' + calEvent.title);
+        		alert('Coordinates: ' + jsEvent.pageX + ',' + jsEvent.pageY);
+        		alert('View: ' + view.name);
+
+        		// change the border color just for fun
+        		$(this).css('border-color', 'red');
+
+    		}
 		});
 		
 	});
